----------------------------------------------------------------------
 OmegaT 2.0.5 update 3
  0 Enhancement
  2 Bugfixes
----------------------------------------------------------------------
2.0.5 update 3 vs. 2.0.5 update 2

  Bug Fixes:

  - References to Java 1.4 removed in OmegaT.l4J.ini
  - Various corrections in the manual

----------------------------------------------------------------------
 OmegaT 2.0.5 update 2
  7 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.0.5 update 2 vs. 2.0.5 update 1

  Other enhancements:
  - Basque localisation updated to 2.0.5 (UI, Readme, Instant Start, documentation)
  - Welsh localisation updated to 2.0.5 (UI, Readme, Instant Start)
  - Catalan localisation updated to 2.0.5, backported from 2.1.1 (UI, Readme, Instant Start, documentation)
  - New Swedish localisation (2.0.5), backported from 2.1.0 (UI, Readme, Instant Start)
  - Czech localisation updated to 2.0.5 (UI, Readme, Instant Start, documentation)
  - Hungarian localisation updated to 2.0.5 (UI, Readme, Instant Start, documentation)
  - Dutch localisation updated to 2.0.5 (UI, Readme, Instant Start, documentation)

----------------------------------------------------------------------
 OmegaT 2.0.5 update 1
----------------------------------------------------------------------
  7 Enhancements
  6 Bugfixes
----------------------------------------------------------------------
2.0.5 update 1 vs. 2.0.5

  Implemented requests:

  - Document proxy setting
  http://sourceforge.net/support/tracker.php?aid=1878073

  Other enhancements:

  - Turkish localisation updated to 2.0.5 (UI, Readme, Instant Start)
  - Slovenian localisation updated to 2.0.5 (documentation)
  
  - Change pseudo-translated TMX parameter and documentation

  - Hunspell for Linux 64-bit updated to 1.2.8

  - Images are included in the minimal localisation pack

  - <wp:align> and <w:drawing> tags are hidden in the OpenXML filter 

  Bug Fixes:
